--- a/html-css/module-01/index.html
+++ b/html-css/module-01/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,18 +7,15 @@
   </head>
   <body>
     <ul>
-      <li><a href="">lifestyle</a></li>
-      <li><a href="">photodiary</a></li>
-      <li><a href="">music</a></li>
-      <li><a href="">travel</a></li>
+      <li><a href="#">lifestyle</a></li>
+      <li><a href="#">photodiary</a></li>
+      <li><a href="#">music</a></li>
+      <li><a href="#">travel</a></li>
     </ul>
-
     <div>
-      <img src="homework-0.png" alt="" />
+      <img src="img/homework-0.png" alt="" />
       <p>Lifestyle</p>
-
       <h2>More than just a music festival</h2>
-
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas saepe
         dolorem repellat, debitis, quia, distinctio expedita qui magnam
@@ -34,13 +31,10 @@
         distinctio sapiente!
       </p>
     </div>
-
     <div>
-      <img src="homework-1.png" alt="" />
+      <img src="img/homework-1.png" alt="" />
       <p>lifestyle</p>
-
       <h2>Life tastes better with coffee</h2>
-
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas saepe
         dolorem repellat, debitis, quia, distinctio expedita qui magnam
@@ -57,11 +51,9 @@
       </p>
     </div>
     <div>
-      <img src="homework-2.png" alt="" />
+      <img src="img/homework-2.png" alt="" />
       <p>photodiary</p>
-
       <h2>American dream</h2>
-
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas saepe
         dolorem repellat, debitis, quia, distinctio expedita qui magnam
@@ -78,11 +70,9 @@
       </p>
     </div>
     <div>
-      <img src="homework-3.png" alt="" />
+      <img src="img/homework-3.png" alt="" />
       <p>photodiary</p>
-
       <h2>A day exploring the Alps</h2>
-
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas saepe
         dolorem repellat, debitis, quia, distinctio expedita qui magnam
@@ -98,6 +88,6 @@
         distinctio sapiente!
       </p>
     </div>
-    <input type="submit" value="load more" />
+    <input type="button" value="load more" />
   </body>
 </html>
